--- a/lavatv.cabal
+++ b/lavatv.cabal
@@ -67,6 +67,7 @@ library
         Lavatv.Vec
         Lavatv.Core
         Lavatv.Uniq
+        Lavatv.Retime
         Lavatv.HBool
         Lavatv.BV
         Lavatv.HVec
@@ -99,6 +100,7 @@ library
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.17.2.1
+      , containers
       , ghc-typelits-natnormalise
       , ghc-typelits-presburger
       , ghc-typelits-extra
