--- a/lavatv.cabal
+++ b/lavatv.cabal
@@ -92,6 +92,7 @@ library
     ghc-options:
         -fno-cse
         -fno-full-laziness
+        -fno-ignore-asserts
         -fplugin GHC.TypeLits.Normalise
         -fplugin GHC.TypeLits.Presburger
         -fplugin GHC.TypeLits.Extra.Solver
