Added simulation support for BV, along with new primitives

--- a/lavatv.cabal
+++ b/lavatv.cabal
@@ -89,6 +89,7 @@ library
         TypeFamilies
         BlockArguments
         MonomorphismRestriction
+        UndecidableInstances
 
     ghc-options:
         -fno-cse
