--- a/lavatv.cabal
+++ b/lavatv.cabal
@@ -107,6 +107,7 @@ library
     build-depends:
         base ^>=4.17.2.1
       , containers
+      , process
       , pretty
       , ghc-typelits-natnormalise
       , ghc-typelits-presburger
