Reduced the constraint proliferation problem

--- a/lavatv.cabal
+++ b/lavatv.cabal
@@ -91,6 +91,7 @@ library
         BlockArguments
         MonomorphismRestriction
         UndecidableInstances
+        UndecidableSuperClasses
 
     ghc-options:
         -fno-cse
